--- a/index.html
+++ b/index.html
@@ -1,8 +1,274 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
   <head>
-    <title>Hello World</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Welcome to my HomePage</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <!-- Simple Line Icons CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+
   </head>
-  <body>
-    Hi there, This is Shivesh Abhishek , presently a beginner in GitHub. Trying to explore more and more about it.
+
+  <body id="page-top">
+    <!-- Navigation -->
+    <a class="menu-toggle rounded" href="#">
+      <i class="fa fa-bars"></i>
+    </a>
+    <nav id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand">
+          <a class="js-scroll-trigger">Switch to</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#page-top">Home</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#services">Hobbies</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Header -->
+    <header class="masthead d-flex">
+      <div class="container text-center my-auto">
+        <h1 class="mb-1">Be Productive</h1>
+        <h3 class="mb-5" id="anim">
+          <em id="anim">Make Yourself Worth it!</em>
+        </h3>
+        <a class="btn btn-primary btn-lg js-scroll-trigger" href="#about">▼</a>
+      </div>
+      <div class="overlay"></div>
+    </header>
+
+    <!-- About -->
+    <section class="content-section bg-light" id="about">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h2>Shivesh welcomes you</h2>
+             <h4>About Me:</h4>
+             <div class="row">
+            <div class="col-sm-6">
+              <p class="lead mb-5">Final Year Student pursuing my Bachelor of Technology (Computer Sc. and Engg.) from 
+              <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
+            </div>
+            <div class="col-sm-6">
+              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> in search of Internship !
+                <p class="lead mb-5">Hometown: <a href="https://en.wikipedia.org/wiki/Dhanbad">Dhanbad</a></p>
+              </p>
+            </div>
+          </div>
+          <a class="btn btn-dark btn-lg js-scroll-trigger" href="#services">▼</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section class="content-section bg-primary text-white text-center" id="services">
+      <div class="container">
+        <div class="content-section-heading">
+          <h3 class="text-secondary mb-0">Hobbies</h3>
+          <h2 class="mb-5">What I like</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fa fa-code"></i>
+            </span>
+            <h4>
+              <strong>Coding</strong>
+            </h4>
+            <p class="text-faded mb-0">Love to code </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-music-tone"></i>
+            </span>
+            <h4>
+              <strong>Guitar</strong>
+            </h4>
+            <p class="text-faded mb-0"><i class="fa fa-heart"> </i> to play !</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fa fa-gamepad"></i>
+            </span>
+            <h4>
+              <strong>Gaming</strong>
+            </h4>
+            <p class="text-faded mb-0"><!-- <i class="fa fa-gamepad"></i> --> 
+              Lets Play ;)</p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fa fa-circle-o-notch"></i>
+            </span>
+            <h4>
+              <strong>Technology</strong>
+            </h4>
+            <p class="text-faded mb-0">Curious about it!</p>
+          </div>
+        </div>
+      </div>
+       <a class="btn btn-dark btn-lg js-scroll-trigger" href="#portfolio">▼</a>
+    </section>
+
+    <!-- Callout -->
+   <!--  <section class="callout">
+      <div class="container text-center">
+        <h2 class="mx-auto mb-5">Welcome to
+          <em>your</em>
+          next website!</h2>
+        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+      </div>
+    </section> -->
+
+    <!-- Portfolio -->
+    <section class="content-section" id="portfolio">
+      <div class="container">
+        <div class="content-section-heading text-center">
+          <h3 class="text-secondary mb-0">Portfolio</h3>
+          <h2 class="mb-5">Recent Projects</h2>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="https://github.com/shiveshabhishek/Enigmail" target="_blank">
+              <span class="caption">
+                <span class="caption-content">
+                  <h1>Single-Page Application</h1>
+                  <p class="mb-0">7th semester project . Made with AngularJS</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="http://www.codebazar.xyz" target="_blank">
+              <span class="caption">
+                <span class="caption-content">
+                  <h1>Codebazar.xyz</h1>
+                  <p class="mb-0">A website made with the idea of Startup with my colleagues!</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/portfolio-2.png" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="https://github.com/shiveshabhishek/AJAX-Chat" target="_blank">
+              <span class="caption">
+                <span class="caption-content">
+                  <h1>AJAX-Chat</h1>
+                  <p class="mb-0">Final-Year Project (Chat App)(Under Review)</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="mydata/shivesh_CV.pdf" download="shiveshabhishek">
+              <span class="caption">
+                <span class="caption-content">
+                  <h1>Download My CV</h1>
+                  <p class="mb-0">Know More about me!</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action -->
+   <!--  <section class="content-section bg-primary text-white">
+      <div class="container text-center">
+        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+        <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
+        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+      </div>
+    </section>
+ -->
+    <!-- Map -->
+    <!-- <section id="contact" class="map">
+      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+      <br/>
+      <small>
+        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+      </small>
+    </section> -->
+
+    <!-- Footer -->
+    <footer class="footer text-center" id="contact">
+      <div class="container">
+        <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-1" href="https://www.linkedin.com/in/shivesh-abhishek-84b031ab/" target="_blank">
+              <i class="icon-social-linkedin"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-1" href="https://github.com/shiveshabhishek" 
+            target="_blank">
+              <i class="icon-social-github" target="_blank"></i>
+            </a>
+          </li>
+           <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-1" href="https://www.facebook.com/shivesh.abhishek" 
+            target="_blank">
+              <i class="icon-social-facebook" target="_blank"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-1" href="https://www.youtube.com/shiveshabhishek" target="_blank">
+              <i class="fa fa-youtube" target="_blank"></i>
+            </a>
+          </li>
+          <!--  -->
+        </ul>
+        <p class="text-muted small mb-0">&copy; Shivesh Abhishek 2018</p>
+      </div>
+    </footer>
+
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+      <i class="fa fa-angle-up"></i>
+    </a>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js.map"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/stylish-portfolio.min.js"></script>
+
   </body>
+
 </html>
