--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
         </div>
       </div>
-       <a class="btn btn-dark btn-lg js-scroll-trigger" href="#portfolio">▼</a>
+       <a class="btn btn-dark btn-lg js-scroll-trigger" style="margin-top:30px;" href="#portfolio">▼</a>
     </section>
 
 		<!-- Portfolio -->
