Adding link to my YourQuote account

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
         </div>
       </div>
     </section>
+	
+	<!-- Link to Yourquote account -->
+	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/">Link to my feelings -->>> <i class="fab fa-accusoft"></i> 
+quotes ;) </a>
 
     <!-- Footer -->
     <footer class="footer text-center" id="contact">
