--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
             </div>
             <div class="col-sm-6">
-              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> in search of Internship !
+              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>, working as Intern!
                 <p class="lead mb-5">Hometown: <a href="https://en.wikipedia.org/wiki/Dhanbad">Dhanbad</a></p>
               </p>
             </div>
