--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Font-Awesome-5-SVG_with_JS -->
+    <script defer src="/static/fontawesome/fontawesome-all.js"></script>
+
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -77,7 +80,7 @@
               <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
             </div>
             <div class="col-sm-6">
-              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>, working as Intern!
+              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>working as Intern!
                 <p class="lead mb-5">Hometown: <a href="https://en.wikipedia.org/wiki/Dhanbad">Dhanbad</a></p>
               </p>
             </div>
