added Font-awesome-5 svg-with-js
-minor fixes

Signed-off-by: Shivesh <shankeyshivesh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Font-Awesome-5-SVG_with_JS -->
-    <script defer src="/static/fontawesome/fontawesome-all.js"></script>
-
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -198,7 +195,7 @@
     </section>
 	
 	<!-- Link to Yourquote account -->
-	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/">Link to my feelings -->>> <i class="fab fa-accusoft"></i> 
+	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/" style="text-align:center">Link to my feelings -->> <i class="fa fa-pied-piper" aria-hidden="true"></i>
 quotes ;) </a>
 
     <!-- Footer -->
