--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </section>
 	
 	<!-- Link to Yourquote account -->
-	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/" style="text-align:center">Link to my feelings -->> <i class="fa fa-pied-piper" aria-hidden="true"></i>
+	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/" style="text-align:center;">Link to my feelings -->> <i class="fa fa-pied-piper" aria-hidden="true"></i>
 quotes ;) </a>
 
     <!-- Footer -->
