--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome to my HomePage</title>
-
+    <title>Welcome!</title>
+    <!-- Favicon -->
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -73,11 +74,11 @@
              <h4>About Me:</h4>
              <div class="row">
             <div class="col-sm-6">
-              <p class="lead mb-5">Final Year Student pursuing my Bachelor of Technology (Computer Sc. and Engg.) from 
+              <p class="lead mb-5">Completed Bachelor of Technology (Computer Sc. and Engg.) degree 
               <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
             </div>
             <div class="col-sm-6">
-              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>working as Intern!
+              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>working as Graduate Trainee!
                 <p class="lead mb-5">Hometown: <a href="https://en.wikipedia.org/wiki/Dhanbad">Dhanbad</a></p>
               </p>
             </div>
@@ -162,7 +163,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h1>Codebazar.xyz</h1>
-                  <p class="mb-0">A website made with the idea of Startup with my colleagues!</p>
+                  <p class="mb-0">A website made with the idea of Startup with my colleagues! (Expired)</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.png" alt="">
@@ -173,7 +174,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h1>AJAX-Chat</h1>
-                  <p class="mb-0">Final-Year Project (Chat App)(Under Review)</p>
+                  <p class="mb-0">Project (Chat App)(Under Review)</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -196,7 +197,7 @@
 	
 	<!-- Link to Yourquote account -->
 	<a href="https://www.yourquote.in/shivesh-abhishek-f1uv/quotes/" style="text-align:center;">Link to my feelings -->> <i class="fa fa-pied-piper" aria-hidden="true"></i>
-quotes ;) </a>
+My Yourquote Profile ;) </a>
 
     <!-- Footer -->
     <footer class="footer text-center" id="contact">
@@ -222,6 +223,11 @@ quotes ;) </a>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-1" href="https://www.youtube.com/shiveshabhishek" target="_blank">
               <i class="fa fa-youtube" target="_blank"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-1" href="https://twitter.com/shankeyshivesh" target="_blank">
+              <i class="fa fa-twitter" target="_blank"></i>
             </a>
           </li>
           <!--  -->
