--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
              <h4>About Me:</h4>
              <div class="row">
             <div class="col-sm-6">
-              <p class="lead mb-5">Completed Bachelor of Technology (Computer Sc. and Engg.) degree 
+              <p class="lead mb-5">Completed Bachelor of Technology (Computer Sc. and Engg.) Degree (2014-18) <br>
               <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
             </div>
             <div class="col-sm-6">
