update work profile
Signed-off-by: Shivesh Abhishek <shivesh.abhishek@mayadata.io>

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a href="http://www.makautexam.net/">MAKAUT University</a>!</p>
             </div>
             <div class="col-sm-6">
-              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>working as Graduate Trainee!
+              <p class="lead mb-5">Presently at <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a> <blockquote>#Mayadata</blockquote>working as Software Engineer, Sept 2018!
                 <p class="lead mb-5">Hometown: <a href="https://en.wikipedia.org/wiki/Dhanbad">Dhanbad</a></p>
               </p>
             </div>
@@ -174,7 +174,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h1>AJAX-Chat</h1>
-                  <p class="mb-0">Project (Chat App)(Under Review)</p>
+                  <p class="mb-0">Project (Chat App)(Paused)</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
